option java_package = "com.chuangyou.common.protobuf.pb.skill";
option java_outer_classname = "SkillPropertyProto";

//技能总属性
message SkillProperty {
	optional int32 type = 1; //属性类型
	optional int64 pro = 2; //属性值
}